removed endpoints security